@@ -170,3 +170,5 @@ DEFINE_GUID(RemoteDisconnectDriveError1Id,0xc9439386,0x9544,0x49bf,0x95,0x4b,0x6
 DEFINE_GUID(VHDDisconnectDriveErrorId,0xb890e6b0,0x5a9,0x4ed8,0xa4,0xc3,0xbb,0xc4,0xd2,0x9d,0xa3,0xbe);
 // {F3D46DC3-380B-4264-8BF8-10B05B897A5E}
 DEFINE_GUID(ChangeDriveCannotReadDiskErrorId,0xf3d46dc3,0x380b,0x4264,0x8b,0xf8,0x10,0xb0,0x5b,0x89,0x7a,0x5e);
+// {044EF83E-8146-41B2-97F0-404C2F4C7B69}
+DEFINE_GUID(ApplyCommandId,0x44ef83e,0x8146,0x41b2,0x97,0xf0,0x40,0x4c,0x2f,0x4c,0x7b,0x69);
