@@ -1,4 +1,12 @@
-﻿w17 08.09.2015 16:09:18 +0300 - build 4416
+﻿svs 08.09.2015 17:50:24 +0300 - build 4417
+
+1. Mantis#0002905: Присвоить гуид диалогу Apply command (CtrlG)
+
+    ApplyCommandId                   = {044EF83E-8146-41B2-97F0-404C2F4C7B69}  --> Dlg.Id
+    Диалог "Применить команду" (CtrlG)
+
+
+w17 08.09.2015 16:09:18 +0300 - build 4416
 
 1. Уточнение 4414 -typo
 
